--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <a id="user-content-1" href="#1">
 <div align="center">
 <a target="_blank" href="https://github.com/oluwgd3313/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/www.jpg"></a><br>
-<p><details><summary>个别情况打不开，请用<a href="https://github.com/oluwgd3313/www/blob/master/README.md?u#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
-建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://i8.ae/aaabbb">i8.ae/aaabbb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/8cccc">git.io/8cccc</a><br>  
+<p><details><summary>个别情况打不开，请用<a href="https://github.com/oluwgd3313/www/blob/master/README.md?i#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
+建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://i8.ae/aaabbb">i8.ae/aaabbb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/ppppd">git.io/ppppd</a><br>  
 </details>
 <br>
 <h1><p><strong>新闻热点 海外报道</strong></p></h1>
@@ -38,10 +38,10 @@
 <p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/18/n13588055.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/徐州“锁链女”是李莹？技术比对结果令人震惊 >-009fcc?logoWidth=1" title="徐州＂锁链女＂是李莹？技术比对结果令人震>>" alt="徐州＂锁链女＂是李莹？技术比对结果令人震>>"></a></p>
 <p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/18/n13586694.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/周晓辉：三大丑闻难掩 北京当局骗术被揭穿  >-009fcc?logoWidth=1" title="周晓辉：三大丑闻难掩　北京当局骗术被揭穿>>" alt="周晓辉：三大丑闻难掩　北京当局骗术被揭穿>>"></a></p>
 <p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/18/n13587946.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/探望八孩母的两女孩获释 曝警方“熬鹰”迫害 >-009fcc?logoWidth=1" title="探望八孩母的两女孩获释　曝警方＂熬鹰＂迫>>" alt="探望八孩母的两女孩获释　曝警方＂熬鹰＂迫>>"></a></p>
-<p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/18/n13586106.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/海内外艺术家联署声援铁链女         >-009fcc?logoWidth=1" title="海内外艺术家联署声援铁链女　　　　　　　>>" alt="海内外艺术家联署声援铁链女　　　　　　　>>"></a></p>
-<p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/19/n13588996.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/传天津政法书记赵飞涉孙力军案 被内部调查  >-009fcc?logoWidth=1" title="传天津政法书记赵飞涉孙力军案　被内部调查>>" alt="传天津政法书记赵飞涉孙力军案　被内部调查>>"></a></p>
-<p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/18/n13587202.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/袁红冰：党内反习势力策动“骂习”攻势    >-009fcc?logoWidth=1" title="袁红冰：党内反习势力策动＂骂习＂攻势　　>>" alt="袁红冰：党内反习势力策动＂骂习＂攻势　　>>"></a></p>
+<p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/19/n13589413.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/质疑洗脑大片《长津湖》 媒体人罗昌平被诉  >-009fcc?logoWidth=1" title="质疑洗脑大片《长津湖》　媒体人罗昌平被诉>>" alt="质疑洗脑大片《长津湖》　媒体人罗昌平被诉>>"></a></p>
 <p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/19/n13588875.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/郝平：铁链女危急！中共调查组背后是大维稳  >-009fcc?logoWidth=1" title="郝平：铁链女危急！中共调查组背后是大维稳>>" alt="郝平：铁链女危急！中共调查组背后是大维稳>>"></a></p>
+<p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/18/n13587202.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/袁红冰：党内反习势力策动“骂习”攻势    >-009fcc?logoWidth=1" title="袁红冰：党内反习势力策动＂骂习＂攻势　　>>" alt="袁红冰：党内反习势力策动＂骂习＂攻势　　>>"></a></p>
+<p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/19/n13588996.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/传天津政法书记赵飞涉孙力军案 被内部调查  >-009fcc?logoWidth=1" title="传天津政法书记赵飞涉孙力军案　被内部调查>>" alt="传天津政法书记赵飞涉孙力军案　被内部调查>>"></a></p>
 <p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/11/n13571299.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/160名将军被查 中共军队腐败超想像    >-009fcc?logoWidth=1" title="１６０名将军被查　中共军队腐败超想像　　>>" alt="１６０名将军被查　中共军队腐败超想像　　>>"></a></p>
 <p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/19/n13588267.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/分析：习近平当前最大困境          >-009fcc?logoWidth=1" title="分析：习近平当前最大困境　　　　　　　　>>" alt="分析：习近平当前最大困境　　　　　　　　>>"></a></p>
 <p><a href="https://github.com/oluwgd3313/djy/blob/master/gb/22/2/18/n13586087.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/岳山：铁链女事件 官员都坐等习近平下令？  >-009fcc?logoWidth=1" title="岳山：铁链女事件　官员都坐等习近平下令？>>" alt="岳山：铁链女事件　官员都坐等习近平下令？>>"></a></p>
@@ -246,9 +246,9 @@
 
 <h1><strong>其它的真相媒体</strong></h1>
 <p><details><summary><a target="_blank" href="https://oluwgd3313.github.io/vd/wm.html?from=nayunhai_852">网门动态临时版</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?nokqj">网门软件下载</a></p>
+<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?soatc">网门软件下载</a></p>
 </details>
-<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?kklqf">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
+<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?mrfpk">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
 <details><summary>看中国新闻网</summary>
 <br><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看大陆.md?t=02121122">看大陆</a></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看官场.md?t=02121122">看官场</a></p>
@@ -292,8 +292,8 @@
 </details>
 </details>
 <p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md#%E6%98%8E%E6%85%A7%E6%9C%9F%E5%88%8A">在线看明慧期刊</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?ocxie">明慧期刊</a></p>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?bajdl">明慧特刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?flpte">明慧期刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?kvbej">明慧特刊</a></p>
 </details>
 
 <p><details><summary><a target="_blank" href="https://github.com/hao2369/a/wiki/jyg">聚缘阁网页代理</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://gitlab.com/szzdlab/www/raw/master/23ec.png"/></p></summary>一键点击 轻松翻墙</p>
@@ -497,8 +497,8 @@
 </strong></p>
 <div align="center">
 <hr>
-<p><strong><a href="https://github.com/oluwgd3313/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/oluwgd3313/ntdtv/blob/master/gb/contribute.md?e#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/oluwgd3313/www/blob/master/README.md?n#1">稳定版平台</a></strong></p>
-<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/oluwgd3313/www/master/index.html?i">https://ghcdn.rawgit.org/oluwgd3313/www/master/index.html?v</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/oluwgd3313/www/master/index.html?v" title="分享本平台"></img>
+<p><strong><a href="https://github.com/oluwgd3313/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/oluwgd3313/ntdtv/blob/master/gb/contribute.md?k#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/oluwgd3313/www/blob/master/README.md?p#1">稳定版平台</a></strong></p>
+<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/oluwgd3313/www/master/index.html?e">https://ghcdn.rawgit.org/oluwgd3313/www/master/index.html?r</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/oluwgd3313/www/master/index.html?l" title="分享本平台"></img>
 </div>
 <div align="center">短网址: <a href="https://i8.ae/aaabbb">i8.ae/aaabbb</a></div> 
 
