--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <a id="user-content-1" href="#1">
 <div align="center">
 <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/www.jpg"></a><br>
-<p><details><summary>个别情况打不开，请用<a href="https://github.com/qtfwow338/www/blob/master/README.md?z#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
-建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://ks.sa/aabb">ks.sa/aabb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/jdddd">git.io/jdddd</a><br>  
+<p><details><summary>个别情况打不开，请用<a href="https://github.com/qtfwow338/www/blob/master/README.md?n#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
+建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://ks.sa/aabb">ks.sa/aabb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/ppppb">git.io/ppppb</a><br>  
 </details>
 <br>
 <h1><p><strong>新闻热点 海外报道</strong></p></h1>
@@ -36,11 +36,11 @@
 <details><summary>更多....&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/><br></summary>
 <p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13607895.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/川普：拜登中止打击中共间谍项目是“大错误” >-009fcc?logoWidth=1" title="川普：拜登中止打击中共间谍项目是＂大错误>>" alt="川普：拜登中止打击中共间谍项目是＂大错误>>"></a></p>
 <p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607321.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/蓬佩奥：中国共产党是美国最大境外威胁    >-009fcc?logoWidth=1" title="蓬佩奥：中国共产党是美国最大境外威胁　　>>" alt="蓬佩奥：中国共产党是美国最大境外威胁　　>>"></a></p>
-<p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607072.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/俄军遭遇后勤挑战与坚定抵抗         >-009fcc?logoWidth=1" title="俄军遭遇后勤挑战与坚定抵抗　　　　　　　>>" alt="俄军遭遇后勤挑战与坚定抵抗　　　　　　　>>"></a></p>
+<p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13608371.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/袁斌：如果心里没鬼 官方会把董集村封得死死的>-009fcc?logoWidth=1" title="袁斌：如果心里没鬼　官方会把董集村封得死>>" alt="袁斌：如果心里没鬼　官方会把董集村封得死>>"></a></p>
 <p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13607833.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/小粉红讽乌克兰 中国留学生遭殃       >-009fcc?logoWidth=1" title="小粉红讽乌克兰　中国留学生遭殃　　　　　>>" alt="小粉红讽乌克兰　中国留学生遭殃　　　　　>>"></a></p>
 <p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13606929.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/中共迄今未撤侨 乌克兰中国留学生整夜苦等通知>-009fcc?logoWidth=1" title="中共迄今未撤侨　乌克兰中国留学生整夜苦等>>" alt="中共迄今未撤侨　乌克兰中国留学生整夜苦等>>"></a></p>
 <p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607359.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/央视被打脸 传假消息称乌总统离开基辅    >-009fcc?logoWidth=1" title="央视被打脸　传假消息称乌总统离开基辅　　>>" alt="央视被打脸　传假消息称乌总统离开基辅　　>>"></a></p>
-<p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13608371.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/袁斌：如果心里没鬼 官方会把董集村封得死死的>-009fcc?logoWidth=1" title="袁斌：如果心里没鬼　官方会把董集村封得死>>" alt="袁斌：如果心里没鬼　官方会把董集村封得死>>"></a></p>
+<p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607072.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/俄军遭遇后勤挑战与坚定抵抗         >-009fcc?logoWidth=1" title="俄军遭遇后勤挑战与坚定抵抗　　　　　　　>>" alt="俄军遭遇后勤挑战与坚定抵抗　　　　　　　>>"></a></p>
 <p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607443.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/俄乌开战 中乌巨额贸易及华为业务遇险    >-009fcc?logoWidth=1" title="俄乌开战　中乌巨额贸易及华为业务遇险　　>>" alt="俄乌开战　中乌巨额贸易及华为业务遇险　　>>"></a></p>
 <p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13607930.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/大陆粉红言论令在乌华人处险境        >-009fcc?logoWidth=1" title="大陆粉红言论令在乌华人处险境　　　　　　>>" alt="大陆粉红言论令在乌华人处险境　　　　　　>>"></a></p>
 <p><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13608324.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/河南安阳男子持刀捅孩子 造成2死1伤    >-009fcc?logoWidth=1" title="河南安阳男子持刀捅孩子　造成２死１伤　　>>" alt="河南安阳男子持刀捅孩子　造成２死１伤　　>>"></a></p>
@@ -244,9 +244,9 @@
 
 <h1><strong>其它的真相媒体</strong></h1>
 <p><details><summary><a target="_blank" href="https://qtfwow338.github.io/vd/wm.html?from=nayunhai_852">网门动态临时版</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?fszww">网门软件下载</a></p>
+<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?wdzak">网门软件下载</a></p>
 </details>
-<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?czdzv">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
+<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?wfhwy">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
 <details><summary>看中国新闻网</summary>
 <br><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看大陆.md?t=02121122">看大陆</a></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看官场.md?t=02121122">看官场</a></p>
@@ -290,8 +290,8 @@
 </details>
 </details>
 <p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md#%E6%98%8E%E6%85%A7%E6%9C%9F%E5%88%8A">在线看明慧期刊</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?ogrks">明慧期刊</a></p>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?wswrl">明慧特刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?vzaps">明慧期刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?tbnmc">明慧特刊</a></p>
 </details>
 
 <p><details><summary><a target="_blank" href="https://github.com/hao2369/a/wiki/jyg">聚缘阁网页代理</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://gitlab.com/szzdlab/www/raw/master/23ec.png"/></p></summary>一键点击 轻松翻墙</p>
@@ -498,8 +498,8 @@
 </strong></p>
 <div align="center">
 <hr>
-<p><strong><a href="https://github.com/qtfwow338/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/qtfwow338/ntdtv/blob/master/gb/contribute.md?d#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/qtfwow338/www/blob/master/README.md?a#1">稳定版平台</a></strong></p>
-<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/qtfwow338/www/master/index.html?o">https://ghcdn.rawgit.org/qtfwow338/www/master/index.html?o</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/qtfwow338/www/master/index.html?r" title="分享本平台"></img>
+<p><strong><a href="https://github.com/qtfwow338/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/qtfwow338/ntdtv/blob/master/gb/contribute.md?n#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/qtfwow338/www/blob/master/README.md?w#1">稳定版平台</a></strong></p>
+<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/qtfwow338/www/master/index.html?k">https://ghcdn.rawgit.org/qtfwow338/www/master/index.html?j</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/qtfwow338/www/master/index.html?q" title="分享本平台"></img>
 </div>
 <div align="center">短网址: <a href="https://ks.sa/aabb">ks.sa/aabb</a></div> 
 
