--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <a id="user-content-1" href="#1">
 <div align="center">
 <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/www.jpg"></a><br>
-<p><details><summary>个别情况打不开，请用<a href="https://github.com/sxvshi319/www/blob/master/README.md?x#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
-建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://vu.fr/aaabbb">vu.fr/aaabbb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/nnnn9">git.io/nnnn9</a><br>  
+<p><details><summary>个别情况打不开，请用<a href="https://github.com/sxvshi319/www/blob/master/README.md?k#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
+建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://ks.sa/aabb">ks.sa/aabb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/hhhh5">git.io/hhhh5</a><br>  
 </details>
 <br>
 <h1><p><strong>新闻热点 海外报道</strong></p></h1>
@@ -40,7 +40,7 @@
 <p><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/4/n13622812.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/美日澳印联合声明 专家：向中共释放重要信号 >-009fcc?logoWidth=1" title="美日澳印联合声明　专家：向中共释放重要信>>" alt="美日澳印联合声明　专家：向中共释放重要信>>"></a></p>
 <p><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/4/n13622651.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/俄乌战争 中共宣传为民众塑造一个不同画面  >-009fcc?logoWidth=1" title="俄乌战争　中共宣传为民众塑造一个不同画面>>" alt="俄乌战争　中共宣传为民众塑造一个不同画面>>"></a></p>
 <p><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/3/n13620188.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/中共官媒否认俄军枪杀四名中国留学生后删文  >-009fcc?logoWidth=1" title="中共官媒否认俄军枪杀四名中国留学生后删文>>" alt="中共官媒否认俄军枪杀四名中国留学生后删文>>"></a></p>
-<p><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/4/n13622020.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/泽伦斯基露面澄清：仍在基辅         >-009fcc?logoWidth=1" title="泽伦斯基露面澄清：仍在基辅　　　　　　　>>" alt="泽伦斯基露面澄清：仍在基辅　　　　　　　>>"></a></p>
+<p><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/4/n13622020.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/泽连斯基露面澄清：仍在基辅         >-009fcc?logoWidth=1" title="泽连斯基露面澄清：仍在基辅　　　　　　　>>" alt="泽连斯基露面澄清：仍在基辅　　　　　　　>>"></a></p>
 <p><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/4/n13622448.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/多国驻华使馆挂乌克兰国旗 夜里打黄蓝灯光  >-009fcc?logoWidth=1" title="多国驻华使馆挂乌克兰国旗　夜里打黄蓝灯光>>" alt="多国驻华使馆挂乌克兰国旗　夜里打黄蓝灯光>>"></a></p>
 <p><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/3/n13619947.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/随乌克兰危机演变 中共最高层似现分裂迹象  >-009fcc?logoWidth=1" title="随乌克兰危机演变　中共最高层似现分裂迹象>>" alt="随乌克兰危机演变　中共最高层似现分裂迹象>>"></a></p>
 <p><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/4/n13620945.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/蓬佩奥：美国应承认中华民国主权（演说全文） >-009fcc?logoWidth=1" title="蓬佩奥：美国应承认中华民国主权（演说全文>>" alt="蓬佩奥：美国应承认中华民国主权（演说全文>>"></a></p>
@@ -248,9 +248,9 @@
 
 <h1><strong>其它的真相媒体</strong></h1>
 <p><details><summary><a target="_blank" href="https://sxvshi319.github.io/vd/wm.html?from=nayunhai_852">网门动态临时版</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?satag">网门软件下载</a></p>
+<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?vxpaz">网门软件下载</a></p>
 </details>
-<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?pnpfp">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
+<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?fvbzj">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
 <details><summary>看中国新闻网</summary>
 <br><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看大陆.md?t=02121122">看大陆</a></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看官场.md?t=02121122">看官场</a></p>
@@ -294,8 +294,8 @@
 </details>
 </details>
 <p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md#%E6%98%8E%E6%85%A7%E6%9C%9F%E5%88%8A">在线看明慧期刊</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?zzqmy">明慧期刊</a></p>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?zhbxv">明慧特刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?jbsjy">明慧期刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?rsszj">明慧特刊</a></p>
 </details>
 
 <p><details><summary><a target="_blank" href="https://github.com/hao2369/a/wiki/jyg">聚缘阁网页代理</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://gitlab.com/szzdlab/www/raw/master/23ec.png"/></p></summary>一键点击 轻松翻墙</p>
@@ -502,10 +502,10 @@
 </strong></p>
 <div align="center">
 <hr>
-<p><strong><a href="https://github.com/sxvshi319/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/sxvshi319/ntdtv/blob/master/gb/contribute.md?x#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/sxvshi319/www/blob/master/README.md?r#1">稳定版平台</a></strong></p>
-<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/sxvshi319/www/master/index.html?e">https://ghcdn.rawgit.org/sxvshi319/www/master/index.html?j</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/sxvshi319/www/master/index.html?b" title="分享本平台"></img>
+<p><strong><a href="https://github.com/sxvshi319/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/sxvshi319/ntdtv/blob/master/gb/contribute.md?d#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/sxvshi319/www/blob/master/README.md?d#1">稳定版平台</a></strong></p>
+<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/sxvshi319/www/master/index.html?i">https://ghcdn.rawgit.org/sxvshi319/www/master/index.html?m</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/sxvshi319/www/master/index.html?t" title="分享本平台"></img>
 </div>
-<div align="center">短网址: <a href="https://vu.fr/aaabbb">vu.fr/aaabbb</a></div> 
+<div align="center">短网址: <a href="https://ks.sa/aabb">ks.sa/aabb</a></div> 
 
 </body>
 </html>
