--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <a id="user-content-1" href="#1">
 <div align="center">
 <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/www.jpg"></a><br>
-<p><details><summary>个别情况打不开，请用<a href="https://github.com/yvrwxa344/www/blob/master/README.md?c#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
-建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://i8.ae/aaabbb">i8.ae/aaabbb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/immmm">git.io/immmm</a><br>  
+<p><details><summary>个别情况打不开，请用<a href="https://github.com/yvrwxa344/www/blob/master/README.md?i#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
+建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://vu.fr/aaabbb">vu.fr/aaabbb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/xxxxd">git.io/xxxxd</a><br>  
 </details>
 <br>
 <h1><p><strong>新闻热点 海外报道</strong></p></h1>
@@ -39,10 +39,10 @@
 <p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629740.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/分析：习近平认定孙力军案涉高层       >-009fcc?logoWidth=1" title="分析：习近平认定孙力军案涉高层　　　　　>>" alt="分析：习近平认定孙力军案涉高层　　　　　>>"></a></p>
 <p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13630168.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/陈全国动向诡异 两会坐胡春华旁 无新职   >-009fcc?logoWidth=1" title="陈全国动向诡异　两会坐胡春华旁　无新职　>>" alt="陈全国动向诡异　两会坐胡春华旁　无新职　>>"></a></p>
 <p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629314.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/王毅再发战狼言论 对俄乌战争表态矛盾    >-009fcc?logoWidth=1" title="王毅再发战狼言论　对俄乌战争表态矛盾　　>>" alt="王毅再发战狼言论　对俄乌战争表态矛盾　　>>"></a></p>
+<p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13630242.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/分析：俄乌战争或转持久战 启示台湾自助人助 >-009fcc?logoWidth=1" title="分析：俄乌战争或转持久战　启示台湾自助人>>" alt="分析：俄乌战争或转持久战　启示台湾自助人>>"></a></p>
+<p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13630643.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/乌平民首次从人道走廊撤离          >-009fcc?logoWidth=1" title="乌平民首次从人道走廊撤离　　　　　　　　>>" alt="乌平民首次从人道走廊撤离　　　　　　　　>>"></a></p>
 <p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629026.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/中国问题专家：中共挺俄 需严厉制裁中俄   >-009fcc?logoWidth=1" title="中国问题专家：中共挺俄　需严厉制裁中俄　>>" alt="中国问题专家：中共挺俄　需严厉制裁中俄　>>"></a></p>
 <p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629038.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/网络流出俄情报机构报告：对乌战争无胜算   >-009fcc?logoWidth=1" title="网络流出俄情报机构报告：对乌战争无胜算　>>" alt="网络流出俄情报机构报告：对乌战争无胜算　>>"></a></p>
-<p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13628391.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/乌南重镇传巨响 俄导弹遭击落        >-009fcc?logoWidth=1" title="乌南重镇传巨响　俄导弹遭击落　　　　　　>>" alt="乌南重镇传巨响　俄导弹遭击落　　　　　　>>"></a></p>
-<p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/3/n13619965.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/T--84坦克 乌克兰最后的堡垒       >-009fcc?logoWidth=1" title="Ｔ－８４坦克　乌克兰最后的堡垒　　　　　>>" alt="Ｔ－８４坦克　乌克兰最后的堡垒　　　　　>>"></a></p>
 <p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629741.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/分析：中共在俄乌战中玩火          >-009fcc?logoWidth=1" title="分析：中共在俄乌战中玩火　　　　　　　　>>" alt="分析：中共在俄乌战中玩火　　　　　　　　>>"></a></p>
 <p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13630279.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/上海疫情飙升 北京两儿童阳性        >-009fcc?logoWidth=1" title="上海疫情飙升　北京两儿童阳性　　　　　　>>" alt="上海疫情飙升　北京两儿童阳性　　　　　　>>"></a></p>
 <p><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13630026.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/3名政协副主席缺席两会 王正伟缺席原因引关注>-009fcc?logoWidth=1" title="３名政协副主席缺席两会　王正伟缺席原因引>>" alt="３名政协副主席缺席两会　王正伟缺席原因引>>"></a></p>
@@ -247,9 +247,9 @@
 
 <h1><strong>其它的真相媒体</strong></h1>
 <p><details><summary><a target="_blank" href="https://yvrwxa344.github.io/vd/wm.html?from=nayunhai_852">网门动态临时版</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?sywpc">网门软件下载</a></p>
+<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?svwzl">网门软件下载</a></p>
 </details>
-<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?cmvjv">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
+<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?njvhq">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
 <details><summary>看中国新闻网</summary>
 <br><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看大陆.md?t=02121122">看大陆</a></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看官场.md?t=02121122">看官场</a></p>
@@ -293,8 +293,8 @@
 </details>
 </details>
 <p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md#%E6%98%8E%E6%85%A7%E6%9C%9F%E5%88%8A">在线看明慧期刊</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?padow">明慧期刊</a></p>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?ehnjs">明慧特刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?wlial">明慧期刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?lzbjd">明慧特刊</a></p>
 </details>
 
 <p><details><summary><a target="_blank" href="https://github.com/hao2369/a/wiki/jyg">聚缘阁网页代理</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://gitlab.com/szzdlab/www/raw/master/23ec.png"/></p></summary>一键点击 轻松翻墙</p>
@@ -501,10 +501,10 @@
 </strong></p>
 <div align="center">
 <hr>
-<p><strong><a href="https://github.com/yvrwxa344/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/yvrwxa344/ntdtv/blob/master/gb/contribute.md?m#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/yvrwxa344/www/blob/master/README.md?w#1">稳定版平台</a></strong></p>
-<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/yvrwxa344/www/master/index.html?m">https://ghcdn.rawgit.org/yvrwxa344/www/master/index.html?u</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/yvrwxa344/www/master/index.html?w" title="分享本平台"></img>
+<p><strong><a href="https://github.com/yvrwxa344/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/yvrwxa344/ntdtv/blob/master/gb/contribute.md?n#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/yvrwxa344/www/blob/master/README.md?l#1">稳定版平台</a></strong></p>
+<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/yvrwxa344/www/master/index.html?q">https://ghcdn.rawgit.org/yvrwxa344/www/master/index.html?i</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/yvrwxa344/www/master/index.html?a" title="分享本平台"></img>
 </div>
-<div align="center">短网址: <a href="https://i8.ae/aaabbb">i8.ae/aaabbb</a></div> 
+<div align="center">短网址: <a href="https://vu.fr/aaabbb">vu.fr/aaabbb</a></div> 
 
 </body>
 </html>
